data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4398.wast
;; Test 7: Incorrect Stack Depth - **Constraint/Issue**: Tests behavior when the operand stack depth is insufficient for function parameters. - **Test Description**: Formulate a scenario where `call_indirect` requires more function parameters than available on the operand stack, causing a stack underflow and trapping the operation.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func1)
    (func $func1 (param i32 i32) (result i32) (i32.add (local.get 0) (local.get 1)))
    (func $test (result i32)
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch or stack underflow"
)